[gd_scene load_steps=5 format=3 uid="uid://jcdta1fw7rn5"]

[ext_resource type="Script" path="res://UI/MISC/new_country_ui.gd" id="1_adno8"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_qb40a"]
size = Vector2(32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_1wh8k"]
size = Vector2(32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_8br2m"]
size = Vector2(32, 32)

[node name="new_country_ui" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_adno8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -134.0
offset_top = 35.0
offset_right = 134.0
offset_bottom = 66.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "New Country"

[node name="Back_Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 55.0
offset_bottom = 41.0
text = "Back"

[node name="Create_Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -18.0
offset_right = 4.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Create"

[node name="Random_Name" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 134.0
offset_top = 35.0
offset_right = 165.0
offset_bottom = 66.0
grow_horizontal = 2
texture_normal = SubResource("PlaceholderTexture2D_qb40a")
texture_pressed = SubResource("PlaceholderTexture2D_1wh8k")
texture_hover = SubResource("PlaceholderTexture2D_8br2m")
